deploy: def0ef148ae6fe097344751a212e01bd0df4f08c

--- a/data/customer.html
+++ b/data/customer.html
@@ -105,8 +105,8 @@ window.onload = wrap_img;
 
   // prepare fetch urls
   const url = "https://www.teamcheeseatimetime.tk/api/customer/";
-  const like_url = url + "/like/";  // yes reaction
-  const no_url = url + "/no/";  // no reaction
+  const like_url = url + "like/";  // yes reaction
+  const no_url = url + "no/";  // no reaction
 
   // prepare fetch GET options
   const options = {
