deploy: 4fa7c8e9006fffe3d5f17033d0b34bc9ff18447c

--- a/data/customer.html
+++ b/data/customer.html
@@ -104,9 +104,9 @@ window.onload = wrap_img;
   const NO = "no";
 
   // prepare fetch urls
-  const url = "https://www.teamcheeseatimetime.tk/api/customer/";
-  const like_url = url + "like/";  // yes reaction
-  const no_url = url + "no/";  // no reaction
+  const url = "https://www.teamcheeseatimetime.tk/api/customer";
+  const like_url = url + "/like/";  // yes reaction
+  const no_url = url + "/no/";  // no reaction
 
   // prepare fetch GET options
   const options = {
