--- a/data/customer.html
+++ b/data/customer.html
@@ -131,36 +131,39 @@ window.onload = wrap_img;
           error('GET API response failure: ' + response.status);
           return;
       }
+      rowIndex = 0;
       // valid response will have JSON data
       response.json().then(data => {
           console.log(data);
           for (const row of data) {
             // make "tr element" for each "row of data"
             const tr = document.createElement("tr");
-            
+            tr.id = rowIndex;
             // td for question cell
             const question = document.createElement("td");
-              question.innerHTML = row.id + ". " + row.question;  // add fetched data to innerHTML
+            question.innerHTML = row;  // add fetched data to innerHTML
 
             // td for yes cell with onclick actions
             const yes = document.createElement("td");
               const yes_but = document.createElement('button');
-              yes_but.id = YES+row.id   // establishes a YEES JS id for cell
-              yes_but.innerHTML = row.yes;  // add fetched "yes count" to innerHTML
+              yes_but.id = YES + rowIndex;   // establishes a YEES JS id for cell
+              yes_but.innerHTML = 0;  // Initial count
               yes_but.onclick = function () {
                 // onclick function call with "like parameters"
-                reaction(YES, like_url+row.id, yes_but.id);  
+                rowId = event.target.parentNode.parentNode.id;
+                reaction(YES, like_url + rowId, yes_but.id);  
               };
               yes.appendChild(yes_but);  // add "yes button" to yes cell
 
             // td for NO cell with onclick actions
             const no = document.createElement("td");
               const no_but = document.createElement('button');
-              no_but.id = NO+row.id  // establishes a NO JS id for cell
-              no_but.innerHTML = row.no;  // add fetched "no count" to innerHTML
+              no_but.id = NO + rowIndex // establishes a NO JS id for cell
+              no_but.innerHTML = 0;  // add fetched "no count" to innerHTML
               no_but.onclick = function () {
                 // onclick function call with "worst parameters"
-                reaction(NO, no_url+row.id, no_but.id);  
+                rowId = event.target.parentNode.parentNode.id;
+                reaction(NO, no_url + rowIndex, no_but.id);  
               };
               no.appendChild(no_but);  // add "boohoo button" to boohoo cell
              
@@ -171,6 +174,7 @@ window.onload = wrap_img;
 
             // this adds all the tr (row) work above to the HTML "result" container
             resultContainer.appendChild(tr);
+            rowIndex++;
           }
       })
   })
