--- a/index.html
+++ b/index.html
@@ -71,13 +71,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><p>For now, please go to the explanations tab on top instead of navigating through here, it’s a bit complicated. Soon we will add linked quizzes here, but for now enjoy our vast collection of joy and happiness.</p>
 
-<p><img src="/teamcheesep3t8/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
-
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+<p><img src="/teamcheesep3t8/images/calculus-physics-statistics-yeah.png" alt="" title="Our three crowning topics" /></p>
 
 <h1 id="posts">Posts</h1>
 
