miku miku ni chiteageru

--- a/index.html
+++ b/index.html
@@ -8,4 +8,68 @@ For now, please go to the explanations tab on top instead of navigating through 
 
 ![]({{site.baseurl}}/images/calculus-physics-statistics-yeah.png "Our three crowning topics")
 
+<div class="px-5 py-5 mx-auto">
+    <h1 class="text-white"><strong>Python Home Page</strong></h1>
+    <div class="row">
+        <div class="col-4">
+            <div class="card">
+                <img class="card-img-top" src="{{ url_for('static', filename='assets/calculus_img.jpeg') }}" alt="Python Development" height="250">
+                <div class="card-body">
+                <h5 class="card-title"><strong>Calculus Quiz</strong></h5>
+                <p class="card-text">
+                    <ol>
+                        <li>This quiz will pull from a set of 50 calculus questions, present you 20, in an effort to cultivate skills presented in the AP exam</li>
+                        <li>Most of these questions are Calculus AB focused, however in our cruelty there may be BC intensive sections</li>
+                        <li>All questions will have their concept and methodology explained in the explanations section</li>
+                        <li>If you get a full score of 20/20 you will receive a nice reward</li>
+                        <li>This covers topics of varying difficulty, so it's best to have a full understanding before attempting to get 100%</li>
+                        <li>Good Luck!</li>
+                    </ol>
+                </p>
+                <a href="#" class="btn btn-primary">Not Made Yet</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card">
+                <img class="card-img-top" src="{{ url_for('static', filename='assets/statistics_img.jpeg') }}" alt="Flask Development" height="250">
+                <div class="card-body">
+                <h5 class="card-title"><strong>Statistics Quiz</strong></h5>
+                <p class="card-text">
+                    <ol>
+                        <li>This quiz will pull from a set of 30 statistics questions, present you 15, in an effort to cultivate skills made in the first trimester</li>
+                        <li>This is mainly a review of old concepts</li>
+                        <li>All questions will have their concept and methodology explained in the explanations section</li>
+                        <li>If you get a full score of 15/15 you will receive a nice reward</li>
+                        <li>This covers topics of varying difficulty, so it's best to have a full understanding before attempting to get 100%</li>
+                        <li>Good Luck!</li>
+                    </ol>
+                </p>
+                <a href="#" class="btn btn-primary">Not Made Yet</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card">
+                <img class="card-img-top" src="{{ url_for('static', filename='assets/physics_image.png') }}" alt="Backend and Persistence" height="250">
+                <div class="card-body">
+                <h5 class="card-title"><strong>Physics Quiz</strong></h5>
+                <p class="card-text">
+                    <ol>
+                        <li>This quiz will pull from a set of 50 questions, present you 20, in an effort to cultivate skills presented in the AP exam</li>
+                        <li>This is on AP Physics Mechanics, not electrical/magnetism</li>
+                        <li>All questions will have their concept and methodology explained in the explanations section</li>
+                        <li>If you get a full score of 20/20 you will receive a nice reward</li>
+                        <li>This covers topics of varying difficulty, so it's best to have a full understanding before attempting to get 100%</li>
+                        <li>Good Luck!</li>
+                    </ol>
+                </p>
+                <a href="#" class="btn btn-primary">Not Made Yet</a>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+</div>
+
 # Posts
