PLEASE HIDE THE POSTS I DONT KNOW THE PROPER NAME

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 layout: home
 search_exclude: true
 image: images/logo.png
+post_hide: true
 ---
 
-For now, please go to the explanations tab on top instead of navigating through here, it's a bit complicated. Soon we will add linked quizzes here, but for now enjoy our vast collection of joy and happiness. 
+If looking for explanations, please go to the explanations tab above, if ready to test your knowledge with a quiz, please scroll down!
 
 ![]({{site.baseurl}}/images/calculus-physics-statistics-yeah.png "Our three crowning topics")
 
