deploy: 5f248712e417dfd9100311769f284bb217db7913

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>For now, please go to the explanations tab on top instead of navigating through here, it’s a bit complicated. Soon we will add linked quizzes here, but for now enjoy our vast collection of joy and happiness.</p>
+        <div class="home"><p>If looking for explanations, please go to the explanations tab above, if ready to test your knowledge with a quiz, please scroll down!</p>
 
 <p><img src="/teamcheesep3t8/images/calculus-physics-statistics-yeah.png" alt="" title="Our three crowning topics" /></p>
 
