maybe with this?

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 search_exclude: true
 image: images/logo.png
-post_hide: true
+post.hide: true
 ---
 
 If looking for explanations, please go to the explanations tab above, if ready to test your knowledge with a quiz, please scroll down!
