changing the width will hopefully help, hopefully

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ If looking for explanations, please go to the explanations tab above, if ready t
     <div class="row">
         <div class="col-4">
             <div class="card">
-                <img class="card-img-top" src="{{ url_for('static', filename='assets/calculus_img.jpeg') }}" alt="Python Development" height="250">
+                <img class="card-img-top" src="{{ url_for('static', filename='assets/calculus_img.jpeg') }}" alt="Python Development" height="250" width="100">
                 <div class="card-body">
                 <h5 class="card-title"><strong>Calculus Quiz</strong></h5>
                 <p class="card-text">
