--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ If looking for explanations, please go to the explanations tab above, if ready t
     <div class="row">
         <div class="col-4">
             <div class="card">
-                <img class="card-img-top" src="{{ url_for('static', filename='assets/calculus_img.jpeg') }}" alt="Python Development" height="250" width="100">
+                <img class="card-img-top" src="{{ url_for('static', filename='images/calculus_img.jpeg') }}" alt="Python Development" height="250">
                 <div class="card-body">
                 <h5 class="card-title"><strong>Calculus Quiz</strong></h5>
                 <p class="card-text">
@@ -33,7 +33,7 @@ If looking for explanations, please go to the explanations tab above, if ready t
         </div>
         <div class="col-4">
             <div class="card">
-                <img class="card-img-top" src="{{ url_for('static', filename='assets/statistics_img.jpeg') }}" alt="Flask Development" height="250">
+                <img class="card-img-top" src="{{ url_for('static', filename='images/statistics_img.jpeg') }}" alt="Flask Development" height="250">
                 <div class="card-body">
                 <h5 class="card-title"><strong>Statistics Quiz</strong></h5>
                 <p class="card-text">
@@ -52,7 +52,7 @@ If looking for explanations, please go to the explanations tab above, if ready t
         </div>
         <div class="col-4">
             <div class="card">
-                <img class="card-img-top" src="{{ url_for('static', filename='assets/physics_image.png') }}" alt="Backend and Persistence" height="250">
+                <img class="card-img-top" src="{{ url_for('static', filename='images/physics_image.png') }}" alt="Backend and Persistence" height="250">
                 <div class="card-body">
                 <h5 class="card-title"><strong>Physics Quiz</strong></h5>
                 <p class="card-text">
