deploy: 2784cde08f26d1b479504d594f7cde92057534b8

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ window.onload = wrap_img;
     <div class="row">
         <div class="col-4">
             <div class="card">
-                <img class="card-img-top" src="" alt="Python Development" height="250" width="100" />
+                <img class="card-img-top" src="" alt="Python Development" height="250" />
                 <div class="card-body">
                 <h5 class="card-title"><strong>Calculus Quiz</strong></h5>
                 <p class="card-text">
