deploy: 0f232e67cbe39a09a4d4a1910b3ec41d1f814de8

--- a/data/quizChoices.html
+++ b/data/quizChoices.html
@@ -260,7 +260,7 @@ window.onload = wrap_img;
       var cur = document.getElementById(currentPageId);
       cur.style.display = 'none';
 
-      const nextIdx = currentPageIndex + 1;
+      const nextIdx = ++currentPageIndex;
       if (nextIdx >= questionIdList.length ) {
         // TODO: enable final page - redirect to endpage using href
         console.log('done with all questions');
