deploy: e3e1212aa715a1dcd0a95c313bccba702cb0790e

--- a/data/quizChoices.html
+++ b/data/quizChoices.html
@@ -223,7 +223,14 @@ window.onload = wrap_img;
         radioDiv.appendChild(radioButton);
         radioDiv.appendChild(labelValue);
         choicesDiv.appendChild(radioDiv);
+        radio.setAttribute(name, question.id + "choices");
+
+        radio.addEventListener("click", function() {
+          if (this.checked) {
+            answer = this.id;
+            }
       }
+      };
       return choicesDiv;
   }
   function create_buttons(question) {
