deploy: 14eaa401cea6527992c28923aa974da47fa6dec8

--- a/data/quizChoices.html
+++ b/data/quizChoices.html
@@ -226,8 +226,8 @@ window.onload = wrap_img;
         radioDiv.appendChild(labelValue);
         choicesDiv.appendChild(radioDiv);
         radio.addEventListener("click", function() {
-          if (this.checked) {
-            answer = this.id;
+          if (answer.checked) {
+            answer = solution.id;
           }  
         });
       return choicesDiv;
