deploy: dd4edb192e54cd30e741ffc3149458a8183a122d

--- a/data/quizChoices.html
+++ b/data/quizChoices.html
@@ -244,7 +244,7 @@ window.onload = wrap_img;
       'color: blue; width: 150px; height: 40px; ',
     );
     checkButton.onclick = function () {
-      // TODO: Call checkanswer rest API ; if score = 0 (result from the API), display incorrect; else display correc
+      // TODO: Call checkanswer rest API ; if score = 0 (result from the API), display incorrect; else display correct
       // how to get question and answer from user to this function
       const questId = questionIdList[currentPageIndex];
       const answer = 'TODO: needtocheckradiobuttonvalue';
