--- a/data/quizfinish.html
+++ b/data/quizfinish.html
@@ -72,7 +72,7 @@ window.onload = wrap_img;
       <div class="wrapper">
         <!-- HTML  fragment for page -->
 <div id="quiz_score_summary">
-    <!-- javascript generated data -->
+    <!-- javascript generated data -->0
     <h1>Your Quiz Summary</h1>
 </div>
 
@@ -80,8 +80,8 @@ window.onload = wrap_img;
 
   const resultContainer = document.getElementById("quiz_score_summary");
   // prepare fetch urls
-  // const url = "https://www.teamcheeseatimetime.tk/api/quiz";
-  const url = "http://localhost:5000/api/quiz" ;
+  const url = "https://www.teamcheeseatimetime.tk/api/quiz";
+  const urllocal = "http://localhost:5000/api/quiz" ;
   
   const summaryUrl = "/summary";
   // prepare fetch GET options
