deploy: 6c043423d94b5ec52cca6f9377a7eeb5ddfbb6f9

--- a/data/quiz.html
+++ b/data/quiz.html
@@ -163,7 +163,7 @@ window.onload = wrap_img;
           myAnswerResponse = data;
           var msg1 = document.getElementById(questId + 'sol-1');
           const score = data['scoreForThisAnswer']
-          if (score == 0) {
+          if (score > 0) {
             msg1.innerHTML = 'Correct!';
           }
           else {
@@ -350,7 +350,7 @@ window.onload = wrap_img;
 
     var msg3 = document.createElement('div');
     msg3.id = question.id  + 'sol-3';
-    msg3.setAttribute('style', 'margin-top:5px;');
+    msg3.setAttribute('style', 'margin-top:10px;');
     sol.appendChild(msg3);
 
     sol.setAttribute('style', 'padding:10px; border: 1px solid #969696;');
