--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@ window.onload = wrap_img;
                 <h5 class="card-title"><strong>Calculus Quiz</strong></h5>
                 <p class="card-text">
                     <ol>
-                        <li>This quiz will pull from a set of 50 calculus questions, present you 20, in an effort to cultivate skills presented in the AP exam</li>
+                        <li>This quiz will pull from a set of 10 calculus questions, present you 5, in an effort to cultivate skills presented in the AP exam</li>
                         <li>Most of these questions are Calculus AB focused, however in our cruelty there may be BC intensive sections</li>
                         <li>All questions will have their concept and methodology explained in the explanations section</li>
-                        <li>If you get a full score of 20/20 you will receive a nice reward</li>
+                        <li>If you get a full score of 5/5 you will receive a nice reward</li>
                         <li>This covers topics of varying difficulty, so it's best to have a full understanding before attempting to get 100%</li>
                         <li>Good Luck!</li>
                     </ol>
                 </p>
-                <a href="#" class="btn btn-primary">Not Made Yet</a>
+                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?APCalc&amp;totalQs=5" class="btn btn-primary">Calculus Quiz</a>
                 </div>
             </div>
         </div>
@@ -104,15 +104,15 @@ window.onload = wrap_img;
                 <h5 class="card-title"><strong>Statistics Quiz</strong></h5>
                 <p class="card-text">
                     <ol>
-                        <li>This quiz will pull from a set of 30 statistics questions, present you 15, in an effort to cultivate skills made in the first trimester</li>
+                        <li>This quiz will pull from a set of 10 statistics questions, present you 5, in an effort to cultivate skills made in the first trimester</li>
                         <li>This is mainly a review of old concepts</li>
                         <li>All questions will have their concept and methodology explained in the explanations section</li>
-                        <li>If you get a full score of 15/15 you will receive a nice reward</li>
+                        <li>If you get a full score of 5/5 you will receive a nice reward</li>
                         <li>This covers topics of varying difficulty, so it's best to have a full understanding before attempting to get 100%</li>
                         <li>Good Luck!</li>
                     </ol>
                 </p>
-                <a href="#" class="btn btn-primary">Not Made Yet</a>
+                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?APStats&amp;totalQs=5" class="btn btn-primary">Statistics Quiz</a>
                 </div>
             </div>
         </div>
@@ -123,15 +123,15 @@ window.onload = wrap_img;
                 <h5 class="card-title"><strong>Physics Quiz</strong></h5>
                 <p class="card-text">
                     <ol>
-                        <li>This quiz will pull from a set of 50 questions, present you 20, in an effort to cultivate skills presented in the AP exam</li>
+                        <li>This quiz will pull from a set of 10 questions, present you 5 in an effort to cultivate skills presented in the AP exam</li>
                         <li>This is on AP Physics Mechanics, not electrical/magnetism</li>
                         <li>All questions will have their concept and methodology explained in the explanations section</li>
-                        <li>If you get a full score of 20/20 you will receive a nice reward</li>
+                        <li>If you get a full score of 5/5 you will receive a nice reward</li>
                         <li>This covers topics of varying difficulty, so it's best to have a full understanding before attempting to get 100%</li>
                         <li>Good Luck!</li>
                     </ol>
                 </p>
-                <a href="#" class="btn btn-primary">Not Made Yet</a>
+                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?Physics&amp;totalQs=5" class="btn btn-primary">Physics Quiz</a>
                 </div>
             </div>
         </div>
