--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ If looking for explanations, please go to the explanations tab above, if ready t
                         <li>Good Luck!</li>
                     </ol>
                 </p>
-                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?APCalc&totalQs=5" class="btn btn-primary">Calculus Quiz</a>
+                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?subject=APCalc&totalQs=5" class="btn btn-primary">Calculus Quiz</a>
                 </div>
             </div>
         </div>
@@ -46,7 +46,7 @@ If looking for explanations, please go to the explanations tab above, if ready t
                         <li>Good Luck!</li>
                     </ol>
                 </p>
-                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?APStats&totalQs=5" class="btn btn-primary">Statistics Quiz</a>
+                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?subject=APStats&totalQs=5" class="btn btn-primary">Statistics Quiz</a>
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@ If looking for explanations, please go to the explanations tab above, if ready t
                         <li>Good Luck!</li>
                     </ol>
                 </p>
-                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?Physics&totalQs=5" class="btn btn-primary">Physics Quiz</a>
+                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?subject=Physics&totalQs=5" class="btn btn-primary">Physics Quiz</a>
                 </div>
             </div>
         </div>
