--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ window.onload = wrap_img;
                         <li>Good Luck!</li>
                     </ol>
                 </p>
-                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?APCalc&amp;totalQs=5" class="btn btn-primary">Calculus Quiz</a>
+                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?subject=APCalc&amp;totalQs=5" class="btn btn-primary">Calculus Quiz</a>
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@ window.onload = wrap_img;
                         <li>Good Luck!</li>
                     </ol>
                 </p>
-                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?APStats&amp;totalQs=5" class="btn btn-primary">Statistics Quiz</a>
+                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?subject=APStats&amp;totalQs=5" class="btn btn-primary">Statistics Quiz</a>
                 </div>
             </div>
         </div>
@@ -131,7 +131,7 @@ window.onload = wrap_img;
                         <li>Good Luck!</li>
                     </ol>
                 </p>
-                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?Physics&amp;totalQs=5" class="btn btn-primary">Physics Quiz</a>
+                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?subject=Physics&amp;totalQs=5" class="btn btn-primary">Physics Quiz</a>
                 </div>
             </div>
         </div>
