deploy: cd76276892ab599920a43f75a3ba76a8aa42f468

--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        If looking for explanations, please go to the explanations tab above, if ready to test your knowledge with a quiz, please scroll down!
+        <div class="home"><p>If looking for explanations, please go to the explanations tab above, if ready to test your knowledge with a quiz, please scroll down!</p>
 
-![](/teamcheesep3t8/images/calculus-physics-statistics-yeah.png "Our three crowning topics")
+<p><img src="/teamcheesep3t8/images/calculus-physics-statistics-yeah.png" alt="" title="Our three crowning topics" /></p>
 
 <div class="px-5 py-5 mx-auto">
     <h1 class="text-white"><strong>Python Home Page</strong></h1>
     <div class="row">
         <div class="col-4">
             <div class="card">
-                <img class="card-img-top" src="" alt="Python Development" height="250">
+                <img class="card-img-top" src="/images/calculus_img.jpeg'" alt="Python Development" height="250" />
                 <div class="card-body">
                 <h5 class="card-title"><strong>Calculus Quiz</strong></h5>
                 <p class="card-text">
@@ -93,13 +93,13 @@ window.onload = wrap_img;
                         <li>Good Luck!</li>
                     </ol>
                 </p>
-                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?subject=APCalc&totalQs=5" class="btn btn-primary">Calculus Quiz</a>
+                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?subject=APCalc&amp;totalQs=5" class="btn btn-primary">Calculus Quiz</a>
                 </div>
             </div>
         </div>
         <div class="col-4">
             <div class="card">
-                <img class="card-img-top" src="" alt="Flask Development" height="250">
+                <img class="card-img-top" src="/images/statistics_img.jpeg" alt="Flask Development" height="250" />
                 <div class="card-body">
                 <h5 class="card-title"><strong>Statistics Quiz</strong></h5>
                 <p class="card-text">
@@ -112,13 +112,13 @@ window.onload = wrap_img;
                         <li>Good Luck!</li>
                     </ol>
                 </p>
-                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?subject=APStats&totalQs=5" class="btn btn-primary">Statistics Quiz</a>
+                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?subject=APStats&amp;totalQs=5" class="btn btn-primary">Statistics Quiz</a>
                 </div>
             </div>
         </div>
         <div class="col-4">
             <div class="card">
-                <img class="card-img-top" src="" alt="Backend and Persistence" height="250">
+                <img class="card-img-top" src="/images/physics_image.png" alt="Backend and Persistence" height="250" />
                 <div class="card-body">
                 <h5 class="card-title"><strong>Physics Quiz</strong></h5>
                 <p class="card-text">
@@ -131,7 +131,7 @@ window.onload = wrap_img;
                         <li>Good Luck!</li>
                     </ol>
                 </p>
-                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?subject=Physics&totalQs=5" class="btn btn-primary">Physics Quiz</a>
+                <a href="https://lovemydogs.github.io/teamcheesep3t8/data/quiz?subject=Physics&amp;totalQs=5" class="btn btn-primary">Physics Quiz</a>
                 </div>
             </div>
         </div>
@@ -139,8 +139,17 @@ window.onload = wrap_img;
     </div>
 </div>
 
-# Posts
+<h1 id="posts">Posts</h1>
 
+
+
+  
+
+  <!-- Hide posts if front matter flag hide:true -->
+  
+  
+
+</div>
       </div>
     </main><footer class="site-footer h-card">
   <data class="u-url" href="/teamcheesep3t8/"></data>
