--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ window.onload = wrap_img;
     <div class="row">
         <div class="col-4">
             <div class="card">
-                <img class="card-img-top" src="/images/calculus_img.jpeg'" alt="Python Development" height="250" />
+                <img class="card-img-top" src="/teamcheesep3t8/images/calculus_img.jpeg'" alt="Python Development" height="250" />
                 <div class="card-body">
                 <h5 class="card-title"><strong>Calculus Quiz</strong></h5>
                 <p class="card-text">
@@ -99,7 +99,7 @@ window.onload = wrap_img;
         </div>
         <div class="col-4">
             <div class="card">
-                <img class="card-img-top" src="/images/statistics_img.jpeg" alt="Flask Development" height="250" />
+                <img class="card-img-top" src="/teamcheesep3t8/images/statistics_img.jpeg" alt="Flask Development" height="250" />
                 <div class="card-body">
                 <h5 class="card-title"><strong>Statistics Quiz</strong></h5>
                 <p class="card-text">
@@ -118,7 +118,7 @@ window.onload = wrap_img;
         </div>
         <div class="col-4">
             <div class="card">
-                <img class="card-img-top" src="/images/physics_image.png" alt="Backend and Persistence" height="250" />
+                <img class="card-img-top" src="/teamcheesep3t8/images/physics_image.png" alt="Backend and Persistence" height="250" />
                 <div class="card-body">
                 <h5 class="card-title"><strong>Physics Quiz</strong></h5>
                 <p class="card-text">
