trying this, easy to fix, worry not, color change

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@ If looking for explanations, please go to the explanations tab above, if ready t
 
 ![]({{site.baseurl}}/images/calculus-physics-statistics-yeah.png "Our three crowning topics")
 
+
+<div>
+    <style>
+        * {
+            background-color: rgb(29, 41, 108);
+            color: white;
+        }
+    </style>
+</div>
 <div class="px-5 py-5 mx-auto">
     <h1 class="text-white"><strong>Python Home Page</strong></h1>
     <div class="row">
