deploy: 5a4fdca3de076691370d648008fae90b12ec404d

--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@ window.onload = wrap_img;
 
 <p><img src="/teamcheesep3t8/images/calculus-physics-statistics-yeah.png" alt="" title="Our three crowning topics" /></p>
 
+<div>
+    <style>
+        * {
+            background-color: rgb(29, 41, 108);
+            color: white;
+        }
+    </style>
+</div>
 <div class="px-5 py-5 mx-auto">
     <h1 class="text-white"><strong>Python Home Page</strong></h1>
     <div class="row">
