--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ If looking for explanations, please go to the explanations tab above, if ready t
 <div>
     <style>
         * {
-            background-color: rgb(29, 41, 108);
-            color: white;
+            background-color: rgb(193, 198, 254);
+            color: rgb(9, 26, 8);
         }
     </style>
 </div>
