--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ window.onload = wrap_img;
 <div>
     <style>
         * {
-            background-color: rgb(29, 41, 108);
-            color: white;
+            background-color: rgb(193, 198, 254);
+            color: rgb(9, 26, 8);
         }
     </style>
 </div>
