oh i'm stupid i had an extra aquote

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ If looking for explanations, please go to the explanations tab above, if ready t
     <div class="row">
         <div class="col-4">
             <div class="card">
-                <img class="card-img-top" src="{{site.baseurl}}/images/calc_img_ethyria_yeah.jpeg'" alt="Python Development" height="250">
+                <img class="card-img-top" src="{{site.baseurl}}/images/calc_img_ethyria_yeah.jpeg" alt="Python Development" height="250">
                 <div class="card-body">
                 <h5 class="card-title"><strong>Calculus Quiz</strong></h5>
                 <p class="card-text">
