--- a/data/quizfinish.html
+++ b/data/quizfinish.html
@@ -105,8 +105,8 @@ window.onload = wrap_img;
       }
       // valid response will have JSON data
       response.json().then(data => {
-          resultContainer.innerHTML =   '<pre>' + JSON.stringify(data, undefined, '\t') + '</pre>';
-          console.log(data)
+        console.log(data);
+        resultContainer.innerHTML =  <body> + JSON.stringify(data, undefined, '\t') + </body>;
       })
   })
   // catch fetch errors (ie Nginx ACCESS to server blocked)
