deploy: 15d95fe5c6c51dacbc8712edcc93ccb485bdfaa7

--- a/data/quizfinish.html
+++ b/data/quizfinish.html
@@ -106,7 +106,7 @@ window.onload = wrap_img;
       // valid response will have JSON data
       response.json().then(data => {
         console.log(data);
-        resultContainer.innerHTML =  <body> + JSON.stringify(data, undefined, '\t') + </body>;
+        resultContainer.innerHTML =  '<body>' + JSON.stringify(data, undefined, '\t') + '</body>';
       })
   })
   // catch fetch errors (ie Nginx ACCESS to server blocked)
